Added some details in captions

--- a/interactiveFigures/fig3.html
+++ b/interactiveFigures/fig3.html
@@ -12,7 +12,7 @@
         Model 1: <select class="modelChoiceA"></select> &nbsp; &nbsp;
         Model 2: <select class="modelChoiceB"></select> &nbsp; &nbsp;
         Plasma Volume: <select class="vpChoice"></select> &nbsp; &nbsp;
-        Temporal Resolution: <select class="tResChoice"></select>
+        Temporal Resolution [s]: <select class="tResChoice"></select>
       </div>
     </div>
   </div>
