--- a/interactiveFigures/fig5.html
+++ b/interactiveFigures/fig5.html
@@ -15,5 +15,15 @@
   </div>
 </div>
 
+<p>
+    Options for 'Model A' and 'Model B' are: 
+    <li> Extended Tofts Model (ETM) </li>
+    <li> Constrained Extended Reference Region Model (CERRM) </li>
+    <li> Extended Reference Region Model (ERRM) </li>
+    <li> Tofts Model (TM)  </li>
+    <li> Reference Region Model (RRM) </li>
+    <li> Constrained Reference Region Model (CRRM) </li>
+  </p>
+
 <script type="text/javascript" charset="utf-8" src="fig5.js"></script>
 </body>
