--- a/interactiveFigures/fig5.html
+++ b/interactiveFigures/fig5.html
@@ -93,5 +93,5 @@
   </div>
 </div>
 
-<script type="text/javascript" charset="utf-8" src="fig5b.js"></script>
+<script type="text/javascript" charset="utf-8" src="fig5.js"></script>
 </body>
