Rename files for simplicity

--- a/interactiveFigures/fig-errTRes.html
+++ b/interactiveFigures/fig-errTRes.html
@@ -25,5 +25,5 @@
     <li> Constrained Reference Region Model (CRRM) </li>
   </p>
 
-<script type="text/javascript" charset="utf-8" src="fig6.js"></script>
+<script type="text/javascript" charset="utf-8" src="fig-errTRes.js"></script>
 </body>
