--- a/interactiveFigures/fig-errMap.html
+++ b/interactiveFigures/fig-errMap.html
@@ -93,5 +93,5 @@
   </div>
 </div>
 
-<script type="text/javascript" charset="utf-8" src="fig4.js"></script>
+<script type="text/javascript" charset="utf-8" src="fig-errMap.js"></script>
 </body>
