--- a/interactiveFigures/fig-errSim.html
+++ b/interactiveFigures/fig-errSim.html
@@ -17,5 +17,5 @@
   </div>
 </div>
 
-<script type="text/javascript" charset="utf-8" src="fig5.js"></script>
+<script type="text/javascript" charset="utf-8" src="fig-errSim.js"></script>
 </body>
