Set default TRes to 5 for interactive errSim

--- a/interactiveFigures/fig-errSim.html
+++ b/interactiveFigures/fig-errSim.html
@@ -2,7 +2,8 @@
 <!--Plotly.js-->
         <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
-        <body>
+<!-- Frankensteined code from one of the Plotly examples -->
+<body>
 <div class="showcase__section" id="bubble">
   <div class="spacer --small"></div>
   <div id="bubbleplots">
